--- a/src/MyShop/DefaultBundle/Resources/config/routing.yml
+++ b/src/MyShop/DefaultBundle/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 myshop.product_info:
-    path:     /{name}
+    path:     /{id}
     defaults: { _controller: MyShopDefaultBundle:Default:showProduct }
     methods: [GET]
     #requirements:
@@ -8,5 +8,17 @@ myshop.product_info:
 myshop.main_page:
     path:    / 
     defaults: { _controller: MyShopDefaultBundle:Default:index }
+
+myshop.product_create:
+    path: /product/create
+    defaults: { _controller: MyShopDefaultBundle:Default:createSomeProduct }
+
+myshop.product_list:
+    path: /product/list
+    defaults: { _controller: MyShopDefaultBundle:Default:showProductList }
+
+myshop.product_comments:
+    path: /product/comments/{id}
+    defaults: { _controller: MyShopDefaultBundle:Default:showComment }
     
 
