--- a/src/MyShop/DefaultBundle/Resources/config/routing.yml
+++ b/src/MyShop/DefaultBundle/Resources/config/routing.yml
@@ -2,16 +2,12 @@ myshop.product_info:
     path:     /{id}
     defaults: { _controller: MyShopDefaultBundle:Default:showProduct }
     methods: [GET]
-    #requirements:
-
+    requirements:
+        id: \d+
 
 myshop.main_page:
     path:    / 
     defaults: { _controller: MyShopDefaultBundle:Default:index }
-
-myshop.product_create:
-    path: /product/create
-    defaults: { _controller: MyShopDefaultBundle:Default:createSomeProduct }
 
 myshop.product_list:
     path: /product/list
@@ -20,5 +16,9 @@ myshop.product_list:
 myshop.product_comments:
     path: /product/comments/{id}
     defaults: { _controller: MyShopDefaultBundle:Default:showComment }
+
+myshop.category_list:
+    path: /category/list
+    defaults: { _controller: MyShopDefaultBundle:Default:showCategoryList }
     
 
