--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,9 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    upload_image_type_list:
+        - ["jpg", "image/jpg"]
+        - ["gif", "image/gif"]
+        - ["png", "image/png"]
+        - ["jpeg", "image/jpeg"]
