Templates + Services + Security

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,8 @@
 my_shop_admin:
     resource: "@MyShopAdminBundle/Resources/config/routing.yml"
     prefix:   /admin
+logout:
+    path: logout
 
 my_shop_default:
     resource: "@MyShopDefaultBundle/Resources/config/routing.yml"
