--- a/src/MyShop/AdminBundle/Resources/config/routing.yml
+++ b/src/MyShop/AdminBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+login:
+    path: /login
+    defaults: { _controller: MyShopAdminBundle:Login:login }
+
 my_shop_admin.index:
     path:     /
     defaults: { _controller: MyShopAdminBundle:Default:index }
