--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,15 +4,20 @@ security:
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory:
-                users:
-                    admin:
-                        password: 123
-                        roles: 'ROLE_ADMIN'
+        db_provider:
+            entity:
+                class: MyShopAdminBundle:User
+                property: username
+
+        # in_memory:
+        #     memory:
+        #         users:
+        #             admin:
+        #                 password: 123
+        #                 roles: 'ROLE_ADMIN'
 
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        MyShop\AdminBundle\Entity\User: bcrypt
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -21,6 +26,7 @@ security:
             security: false
 
         main:
+            provider: db_provider
             anonymous: ~
             form_login:
                 login_path: login
