--- a/src/MyShop/DefaultBundle/Resources/config/services.yml
+++ b/src/MyShop/DefaultBundle/Resources/config/services.yml
@@ -2,3 +2,8 @@ services:
 #    my_shop_default.example:
 #        class: MyShop\DefaultBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+
+  pre_data_loader:
+    class: MyShop\DefaultBundle\PreData\PreDataLoader
+    arguments:
+      - "@doctrine.orm.entity_manager"
