--- a/src/MyShop/AdminBundle/Resources/config/routing.yml
+++ b/src/MyShop/AdminBundle/Resources/config/routing.yml
@@ -100,4 +100,12 @@ my_shop_admin.load_some_product:
 
 my_shop_admin.load_some_category:
     path: /load/some/category
-    defaults: { _controller: MyShopAdminBundle:Default:loadCategory}    
+    defaults: { _controller: MyShopAdminBundle:Default:loadCategory}   
+
+my_shop_admin.products_import_csv:
+    path:   /products/import/csv
+    defaults: { _controller: MyShopAdminBundle:ProductsLoader:importProducts }
+
+my_shop_admin.products_export_csv:
+    path:   /products/export/csv
+    defaults: { _controller: MyShopAdminBundle:ProductsLoader:exportProducts } 
