--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "eventviva/php-image-resize": "^1.6",
-        "swiftmailer/swiftmailer": "^5.4"
+        "swiftmailer/swiftmailer": "^5.4",
+        "egeloen/ckeditor-bundle": "^5.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
