--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "eventviva/php-image-resize": "^1.6",
         "swiftmailer/swiftmailer": "^5.4",
-        "egeloen/ckeditor-bundle": "^5.0"
+        "egeloen/ckeditor-bundle": "^5.0",
+        "knplabs/knp-paginator-bundle": "^2.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
