--- a/src/MyShop/AdminBundle/Resources/config/routing.yml
+++ b/src/MyShop/AdminBundle/Resources/config/routing.yml
@@ -13,6 +13,8 @@ my_shop_admin.product_add:
 my_shop_admin.test:
     path:   /test
     defaults: { _controller: MyShopAdminBundle:Default:test }
+    options:
+        expose: true
 
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
