--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -62,4 +62,6 @@ security:
         - { path: ^/admin/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/customer/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/basket, roles: ROLE_CUSTOMER }
+        - { path: ^/orders, roles: ROLE_CUSTOMER }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
